--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "description": "E commerce Site",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.1.1",
     "express": "^4.17.1",
+    "express-hbs": "^2.4.0",
     "git": "^0.1.5",
     "hbs": "^4.1.2",
+    "mongodb": "^3.6.6",
+    "mongoose": "^5.12.8",
     "request": "^2.88.2",
     "validator": "^13.6.0",
     "yargs": "^16.2.0"
