--- a/package.json
+++ b/package.json
@@ -7,18 +7,30 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon src/app.js"
   },
-  "author": "",
+  "author": "Sangavi Rajagopal",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "body-parser-xml": "^2.0.3",
     "chalk": "^4.1.1",
     "express": "^4.17.1",
     "express-hbs": "^2.4.0",
-    "git": "^0.1.5",
+    "git": "^0.1.3",
     "hbs": "^4.1.2",
-    "mongodb": "^3.6.6",
-    "mongoose": "^5.12.8",
+    "mongodb": "^3.6.9",
+    "mongoose": "^5.12.12",
+    "path": "^0.12.7",
     "request": "^2.88.2",
     "validator": "^13.6.0",
     "yargs": "^16.2.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sangavisanju2101/Global-trade.git"
+  },
+  "bugs": {
+    "url": "https://github.com/sangavisanju2101/Global-trade/issues"
+  },
+  "homepage": "https://github.com/sangavisanju2101/Global-trade#readme"
 }
